<resources>
    <string name="app_name">PersonalizedGreeter</string>
    <string name="strFirstQ">What is your first name?</string>
    <string name="strMiddleQ">What is your middle name?</string>
    <string name="strLastQ">What is your last name?</string>
    <string name="strGetGreeted">Get Greeted!</string>
    <string name="strNamePlaceholder">Name</string>
    <string name="strGreeting">Hello, %1$s %2$s %3$s!</string>
</resources>
