<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pbuskell.personalizedgreeter.BeGreeted">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/strNamePlaceholder"
        android:ems="10"
        android:id="@+id/edtxtFirst"
        android:layout_below="@+id/txtvwPrompt"
        android:layout_alignLeft="@+id/edtxtMiddle"
        android:layout_alignStart="@+id/edtxtMiddle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strGetGreeted"
        android:id="@+id/btnGreetMe"
        android:onClick="greetTheUser"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtvwGreetingSpace"
        android:layout_below="@+id/btnGreetMe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/strFirstQ"
        android:id="@+id/txtvwPrompt"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/edtxtFirst"
        android:layout_alignStart="@+id/edtxtFirst" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:id="@+id/edtxtMiddle"
        android:layout_below="@+id/txtvwMiddle"
        android:layout_alignLeft="@+id/edtxtLast"
        android:layout_alignStart="@+id/edtxtLast" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:id="@+id/edtxtLast"
        android:layout_below="@+id/txtvwLast"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/strMiddleQ"
        android:id="@+id/txtvwMiddle"
        android:layout_below="@+id/edtxtFirst"
        android:layout_alignRight="@+id/edtxtFirst"
        android:layout_alignEnd="@+id/edtxtFirst" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/strLastQ"
        android:id="@+id/txtvwLast"
        android:layout_below="@+id/edtxtMiddle"
        android:layout_alignLeft="@+id/edtxtMiddle"
        android:layout_alignStart="@+id/edtxtMiddle" />

</RelativeLayout>
